--- a/index.html
+++ b/index.html
@@ -5,6 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
-  <body></body>
+  <body>
+    <section class="page-container">
+      <div class="content-container">
+        <h1>An inspiring design delivered to your inbox every morning</h1>
+        <p>
+          Our team scouts the internet for the best designs, illustrations and
+          art and delivers a truly inspiring one every day to your inbox
+        </p>
+        <p id="looks">Show me how it looks</p>
+        <form>
+          <input type="email" id="email" placeholder="Your Email Address" />
+          <button id="submit">Register Now</button>
+        </form>
+        <p id="data-sharing">Free - No Spam - No Data Sharing</p>
+      </div>
+      <div class="image-container">
+        <img src="./Vector.png" alt="" />
+      </div>
+    </section>
+    <footer class="footer-container">
+      <section class="footer-section">
+        <div class="footer-left">
+          <ul>
+            <li>Prompt Generator</li>
+            <li>Dweep Daily</li>
+            <li>All Contributors</li>
+            <li>Your data on Dweep.io</li>
+            <li>Contribution to Dweep</li>
+          </ul>
+        </div>
+        <div class="footer-right">
+          <ul>
+            <li>Dweep.io</li>
+            <li>Made with love in india</li>
+            <span id="footer-icons">
+              <i class="fa fa-instagram"></i>
+              <i class="fa fa-linkedin-square"></i>
+            </span>
+            <li>hello@dweep.io</li>
+          </ul>
+        </div>
+      </section>
+    </footer>
+  </body>
 </html>
